frontend and game link

--- a/frontend/arcade.html
+++ b/frontend/arcade.html
@@ -35,8 +35,9 @@
               <div class="thumb"></div>
               <h4>Flappybara 🐹</h4>
               <p class="muted">Tap to dodge. Weekly prizes.</p>
-              <button class="play" onclick="alert('Open Flappybara')">Play</button>
-            </div>
+              <!-- CHANGE: open game instead of alert -->
+              <button class="play" onclick="window.location.href='game/index.html'">Play</button>
+            </div>            
             <div class="game">
               <div class="thumb"></div>
               <h4>Capy Dash</h4>
