--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=/frontend/" />
-  <title>Redirecting…</title>
+  <meta charset="utf-8" />
+  <!-- Redirect root to the real homepage -->
+  <meta http-equiv="refresh" content="0; url=/frontend/index.html" />
+  <script>window.location.replace("/frontend/index.html");</script>
 </head>
-<body>
-  <p>If you are not redirected automatically, <a href="/frontend/">click here</a>.</p>
-</body>
+<body></body>
 </html>
