--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,12 +39,13 @@
 
       <!-- centered tabs -->
       <div class="pill-nav">
-        <a class="pill active" href="#home">Home</a>
-        <a class="pill" href="about.html">About</a>
-        <a class="pill" href="arcade.html">Arcade</a>
-        <a class="pill" href="how-to-buy.html">How to Buy</a>
-        <a class="pill" href="faq.html">FAQ</a>
-      </div>
+  <a class="pill active" href="#home">Home</a>
+  <a class="pill" href="#about">About</a>
+  <a class="pill" href="#arcade">Arcade</a>
+  <a class="pill" href="#roadmap">Roadmap</a>
+  <a class="pill" href="#faq">FAQ</a>
+</div>
+
 
       <a class="cta" href="#" onclick="alert('Buy link coming soon')">Buy $BARA</a>
     </div>
@@ -103,21 +104,45 @@
       </section>
 
       <!-- SCENE 2: ABOUT -->
-      <section class="scene" id="about">
-        <div class="container reveal">
-          <h2 class="section-title">About $Bara</h2>
-          <div class="about">
-            <div class="page">
-              <h3>Game-Powered Token</h3>
-              <p class="muted">Weekly leaderboards pay out $BARA + partner tokens. Easy to play, hard to master.</p>
-            </div>
-            <div class="page">
-              <h3>Arcade Roadmap</h3>
-              <p class="muted">Flappybara → Endless runner → PVP mini-duels. Seasonal events, NFT cosmetics, and cross-game boards.</p>
-            </div>
-          </div>
-        </div>
-      </section>
+     <section class="scene" id="about">
+  <div class="container reveal">
+    <h2 class="section-title">About $BARA</h2>
+    <div class="about">
+      <div class="page">
+        <h3>Arcade-First Memecoin</h3>
+        <p class="muted">
+          $BARA is built on Solana and designed to be played with. Our mission is to merge
+          the simplicity of viral arcade games with crypto—so holding $BARA is fun,
+          competitive, and rewarding.
+        </p>
+      </div>
+      <div class="page">
+        <h3>Why Arcade?</h3>
+        <p class="muted">
+          Arcade games are timeless: easy to start, hard to master. Climb the leaderboards,
+          earn weekly rewards, and help shape the next drops and events with the community.
+        </p>
+      </div>
+      <div class="page">
+        <h3>What Makes $BARA Different</h3>
+        <p class="muted">
+          🎮 <b>Play-to-Earn Arcade</b> — Weekly prize pools for top players.<br/>
+          🐹 <b>Community First</b> — Fun over over-complicated tokenomics.<br/>
+          🎨 <b>NFT Perks (later)</b> — Cosmetics & access; never pay-to-win.<br/>
+          🔒 <b>Simple & Transparent</b> — 0% buy/sell tax, clear supply, renounced contract.
+        </p>
+      </div>
+      <div class="page">
+        <h3>The Vision</h3>
+        <p class="muted">
+          Step by step we’ll expand the Arcade with new titles, seasonal events, NFT cosmetics,
+          and larger competitions—guided by the players who show up and play.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
       <!-- SCENE 3: ARCADE -->
       <section class="scene" id="arcade">
@@ -148,38 +173,109 @@
         </div>
       </section>
 
-      <!-- SCENE 4: HOW TO BUY -->
-      <section class="scene" id="how">
-        <div class="container reveal">
-          <h2 class="section-title">How to Buy</h2>
-          <div class="steps">
-            <div class="step"><b>1) Get a Wallet</b><br><span class="muted">Phantom or Backpack on Solana.</span></div>
-            <div class="step"><b>2) Fund with SOL</b><br><span class="muted">On-ramp or CEX → send to wallet.</span></div>
-            <div class="step"><b>3) Swap for $BARA</b><br><span class="muted">Use our quick swap (soon) or Jupiter.</span></div>
-          </div>
-        </div>
-      </section>
+      <section class="scene" id="roadmap">
+  <div class="container reveal">
+    <h2 class="section-title">Roadmap</h2>
+
+    <div class="about"> <!-- reuse the 2-col grid -->
+      <div class="page">
+        <h3>Phase 1 — Arcade Awakens</h3>
+        <p class="muted">
+          • Website + branding live<br/>
+          • First $BARA arcade game released<br/>
+          • Leaderboards + weekly rewards enabled<br/>
+          • Community building on Telegram / X<br/>
+          • Contract deployment & liquidity planned late in Phase 1
+        </p>
+      </div>
+
+      <div class="page">
+        <h3>Phase 2 — The Launchpad</h3>
+        <p class="muted">
+          • Full token deployment & trading<br/>
+          • Bigger weekly rewards and optimizations<br/>
+          • NFT teaser drop (cosmetics/perks)<br/>
+          • Next arcade title announcement
+        </p>
+      </div>
+
+      <div class="page">
+        <h3>Phase 3 — Growth Mode</h3>
+        <p class="muted">
+          • New games (revealed with the community)<br/>
+          • Seasonal tournaments & events<br/>
+          • NFT integration + cosmetic marketplace<br/>
+          • Partner collaborations for cross-token rewards
+        </p>
+      </div>
+
+      <div class="page">
+        <h3>Phase 4 — Ecosystem</h3>
+        <p class="muted">
+          • Multi-game Arcade Hub<br/>
+          • DAO-style voting on features/games<br/>
+          • Explore mobile app & broader integrations
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
       <!-- SCENE 5: FAQ -->
-      <section class="scene" id="faq">
-        <div class="container reveal">
-          <h2 class="section-title">FAQ</h2>
-          <div class="faq">
-            <details class="item">
-              <summary>Is the contract renounced / taxes?</summary>
-              <div class="content">0% / 0% taxes. Contract & LP details will be posted at launch.</div>
-            </details>
-            <details class="item">
-              <summary>How do leaderboard rewards work?</summary>
-              <div class="content">Weekly snapshots. Top ranks split a prize pool in $BARA + partner tokens. Anti-bot checks included.</div>
-            </details>
-            <details class="item">
-              <summary>Will there be NFTs?</summary>
-              <div class="content">Yes—cosmetic skins + early access perks. No pay-to-win.</div>
-            </details>
-          </div>
+     <section class="scene" id="faq">
+  <div class="container reveal">
+    <h2 class="section-title">FAQ</h2>
+    <div class="faq">
+      <details class="item" open>
+        <summary>What is $BARA?</summary>
+        <div class="content">
+          $BARA is an arcade-first memecoin on Solana. Play our games, climb the leaderboards,
+          and win rewards — it’s crypto made fun.
         </div>
-      </section>
+      </details>
+
+      <details class="item">
+        <summary>How do rewards work?</summary>
+        <div class="content">
+          Every week, top players on our leaderboards share prize pools in $BARA and sometimes
+          partner tokens.
+        </div>
+      </details>
+
+      <details class="item">
+        <summary>What games are available?</summary>
+        <div class="content">
+          Our first game launches with $BARA. New titles will be revealed as the community grows.
+        </div>
+      </details>
+
+      <details class="item">
+        <summary>Will there be NFTs?</summary>
+        <div class="content">
+          Yes — NFTs arrive later with cosmetics and perks (never pay-to-win).
+        </div>
+      </details>
+
+      <details class="item">
+        <summary>Is $BARA safe?</summary>
+        <div class="content">
+          0% buy/sell tax, transparent supply, and a renounced contract. Liquidity details will
+          be shared at launch.
+        </div>
+      </details>
+
+      <details class="item">
+        <summary>How do I buy $BARA?</summary>
+        <div class="content">
+          Get a Solana wallet (Phantom/Backpack), fund with SOL, and swap for $BARA on launch.
+          DEX links will be posted on the website and socials.
+        </div>
+      </details>
+    </div>
+  </div>
+</section>
+
 
       <!-- SCENE 6: SOCIALS (tighter) -->
       <section class="scene scene-tight" id="socials">
